# prv.ec_old

./: .bazelrc  .clang-format  .clang-tidy  .dir-locals.el  .editorconfig  .gitignore  README.rst  WORKSPACE
b58/: BUILD.bazel  README.rst  b58.cc  b58.h  b58.test.cc  b58_cli.cc
b64/: BUILD.bazel  b64.cc  b64.h  b64.test.cc
b66/: BUILD.bazel  README.rst  b66.cc  b66.h  b66.test.cc  generate_ascii_table.py  marshal_int.cc  marshal_int.h  util.cc  util.h
cli_client/: BUILD.bazel  cacert.h  cli_client.cc  curl.cc  http_requests.cc  http_requests.h  shortening_client.cc  shortening_client.h
curlpool/: BUILD.bazel  README.rst  curlpool.cc  curlpool.h  curlpool.test.cc
docs/: DESIGN.rst  DEVELOPMENT.rst
idl/: BUILD.bazel  all_generated_flatbuffers.h  direct_url.fbs  lookup_request.fbs  lookup_request_web.fbs  lookup_response.fbs  main.cc  private_url.fbs  shortening_request.fbs  shortening_response.fbs  shortening_service.fbs  trusted_lookup_request.fbs  trusted_lookup_response.fbs  trusted_shortening_request.fbs  trusted_shortening_response.fbs  url_index.fbs  url_record.fbs
private_url/: BUILD.bazel  crypto_params.cc  crypto_params.h  private_url.cc  private_url.h  private_url.test.cc
server/: BUILD.bazel  curlpool.cc  curlpool.test.cc  db.cc  db.h  main.cc  private_url.cc  private_url.h  private_url.test.cc  server.cc  shortening_service.cc  shortening_service.h  shortening_service.test.cc  url.cc  url.h  url_index.cc  url_index.h  url_index.test.cc  url_record.h  web.cc  web.h  xorshift.cc  xorshift.h  xorshift.test.cc
tools/: preview_docs
url_index/: BUILD.bazel  url_index.cc  url_index.h  url_index.test.cc
web_client/: .gitignore  .prettierrc.yaml  BUILD.bazel  check_webcrypto_support.js  check_webcrypto_support.ts  common.js  crypto.ts  derive.mjs  index.html  index.js  index.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
web_client/client/: index.ts  v1.ts
web_client/dist-tsc/: index.js  tsconfig.tsbuildinfo
web_client/fbs/: .gitignore  BUILD.bazel  README.rst  lookup_request_generated.ts  lookup_request_web_generated.ts  lookup_response_generated.ts  private_url_generated.ts  shortening_request_generated.ts  shortening_response_generated.ts  trusted_lookup_request_generated.ts  trusted_lookup_response_generated.ts  trusted_shortening_request_generated.ts  trusted_shortening_response_generated.ts  url_index_generated.js  url_index_generated.ts
web_client/fbs_bzl/: BUILD.bazel
web_client/public/: index.html
web_client/rpc/: common.ts  index.ts  lookup.ts  shorten.ts
web_client/util/: base64.ts  fbLong.ts  index.ts  numberArrayToArrayBuffer.ts
xorshift/: BUILD.bazel  xorshift.cc  xorshift.h  xorshift.test.cc
