cc_library(
    name = "b58",
    srcs = ["b58.h", "b58.cc"],
    copts = [
        "-Wall",
        "-Werror",
        "-pedantic",
        "-std=c++20",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "b58_test",
    srcs = ["b58.test.cc"],
    copts = [
        "-Wall",
        "-Werror",
        "-pedantic",
        "-std=c++20",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":b58",
        "@com_github_google_googletest//:gtest",
    ],
)
