load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "b64",
    srcs = [
        "b64.cc",
        "b64.h",
    ],
    hdrs = ["b64.h"],
    copts = [
        "-Werror",
        "-Wall",
        "-pedantic",
        "-std=c++20",
    ],
    include_prefix = "b64",
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "@com_googlesource_boringssl//:crypto",
        "@com_googlesource_boringssl//:ssl",
    ],
)

cc_test(
    name = "b64_test",
    srcs = ["b64.test.cc"],
    visibility = ["//visibility:private"],
    copts = [
        "-Werror",
        "-Wall",
        "-pedantic",
        "-std=c++20",
    ],
    deps = [
        ":b64",
        "@com_github_google_googletest//:gtest",
    ],
)
