cc_library(
    name = "b66",
    srcs = [
        "b66.h",
        "b66.cc",
    ],
    hdrs = ["b66.h"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "b66_test",
    srcs = [
        "b66.test.cc",
    ],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
    ],
    deps = [
        "@com_github_google_googletest//:gtest",
        ":b66",
    ],
)
