cc_binary(
    name = "cli_client",
    srcs = [
        "cli_client.cc",
    ],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Werror",
        "-pedantic",
    ],
    deps = [
        ":shortening_client",
        "@com_github_google_flatbuffers//:flatbuffers",
        "//idl:all_generated_flatbuffers",
    ],
    visibility = ["//visibility:public"],
)


cc_library(
    name = "shortening_client",
    srcs = [
        "shortening_client.h",
        "shortening_client.cc",
        "http_requests.h",
        "http_requests.cc",
        "cacert.h",
    ],
    hdrs = ["shortening_client.h"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Werror",
        "-pedantic",
    ],
    deps = [
        "@com_github_google_flatbuffers//:flatbuffers",
        "//idl:all_generated_flatbuffers",
        "//private_url:private_url",
        "//url_index:url_index",
        "//b66:b66",
        "@se_haxx_curl//:curl",
        "@com_googlesource_boringssl//:ssl",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "curltest",
    srcs = ["curl.cc", "cacert.h"],
    deps = [
        "@se_haxx_curl//:curl",
        "@com_googlesource_boringssl//:ssl",
    ],
)

