load("@rules_cc//cc:defs.bzl", "cc_binary")
package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "server",
    srcs = ["server.cc"],
    visibility = ["//visibility:public"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
        "-pthread",
    ],
    deps = [
        ":web",
    ],
)

cc_library(
    name = "web",
    srcs = [
        "web.cc",
        "web.h",
    ],
    hdrs = ["web.h"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
        "-pthread",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":db",
        ":shortening_service",
        "//b64:b64",
        "//idl:all_generated_flatbuffers",
        "@com_github_google_flatbuffers//:flatbuffers",
        "@com_github_unetworking_uwebsockets//:uWebSockets",
    ],
)

cc_library(
    name = "shortening_service",
    srcs = [
        "shortening_service.h",
        "shortening_service.cc",
    ],
    hdrs = ["shortening_service.h"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":db",
        ":private_url",
        "//idl:all_generated_flatbuffers",
        ":xorshift",
        "@com_github_google_flatbuffers//:flatbuffers",
    ],
)

cc_library(
    name = "db",
    srcs = [
        "db.cc",
        "db.h",
    ],
    hdrs = ["db.h"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
    ],
    deps = [
        "@com_github_facebook_rocksdb//:rocksdb",
    ],
)

cc_library(
    name = "private_url",
    srcs = [
        "private_url.h",
        "private_url.cc",
    ],
    hdrs = ["private_url.h"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@//b64:b64",
        "@com_googlesource_boringssl//:crypto",
        "@com_googlesource_boringssl//:ssl",
    ],
)

cc_test(
    name = "private_url_test",
    srcs = ["private_url.test.cc"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":private_url",
        "@com_github_google_googletest//:gtest",
    ],
)

cc_library(
    name = "xorshift",
    srcs = ["xorshift.h", "xorshift.cc"],
    hdrs= ["xorshift.h"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "xorshift_test",
    srcs = ["xorshift.test.cc"],
    deps = [
        ":xorshift",
        "@com_github_google_googletest//:gtest",
    ],
    visibility = ["//visibility:public"],
)
