load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//third_party/strliteral:build_defs.bzl", "embed_file")
package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "server",
    srcs = ["server.cc"],
    visibility = ["//visibility:public"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
        "-pthread",
    ],
    deps = [
        ":web",
    ],
)

cc_library(
    name = "web",
    srcs = [
        "web.cc",
        "web.h",
    ],
    hdrs = ["web.h"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
        "-pthread",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":db",
        ":shortening_service",
        "//b64:b64",
        "//b66:b66",
        ":index_html",
        ":bundle_js",
        "//idl:all_generated_flatbuffers",
        "@com_github_google_flatbuffers//:flatbuffers",
        "@com_github_unetworking_uwebsockets//:uWebSockets",
    ],
)


cc_library(
    name = "shortening_service",
    srcs = [
        "shortening_service.h",
        "shortening_service.cc",
    ],
    hdrs = ["shortening_service.h"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":db",
        "//private_url:private_url",
        "//url_index:url_index",
        "//idl:all_generated_flatbuffers",
        "@com_github_google_flatbuffers//:flatbuffers",
    ],
)

cc_test(
    name = "shortening_service_test",
    srcs = ["shortening_service.test.cc"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//idl:all_generated_flatbuffers",
        ":shortening_service",
        ":db",
        "//b64:b64",
        "//private_url:private_url",
        "@com_github_google_googletest//:gtest",
    ],
)

cc_library(
    name = "db",
    srcs = [
        "db.cc",
        "db.h",
    ],
    hdrs = ["db.h"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
    ],
    deps = [
        "//url_index:url_index",
        "@com_github_facebook_rocksdb//:rocksdb",
    ],
)

# TODO: Make sure rocksdb builds as static lib


# Frontend files

embed_file(
    name = "index_html",
    srcs = ["//web_client/public:index.html"],
    outs = ["index.html_generated.h"],
    identifier = "index_html",
    visibility = ["//visibility:public"],
)

embed_file(
    name = "bundle_js",
    srcs = ["//web_client:bundle"],
    outs = ["bundle.js_generated.h"],
    identifier = "bundle_js",
    visibility = ["//visibility:public"],
)
