package(default_visibility = ["//visibility:public"])

load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")

# load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

# genrule(
#     name = "bundle",
#     outs = ["dist/index.html"],
#     srcs = [
#         "webpack.config.js",
#         "public/index.html",
#         "tsconfig.json",
#         "package.json",
#     ] + glob([
#         "**/*.ts",
#         "vendor/**/*.js",
#     ]),
#     cmd = """
#     $(excecpath 
#     """
# )

filegroup(
    name = "bundle_srcs",
    srcs = glob([
        "*",
        "**/*.ts",
        "vendor/**/*.js",
        "public/*",
    ]),
)

webpack(
    name = "bundle",
    outs = ["dist/bundle.js"],
    args = [
        # "$(execpath index.ts)",
        "--config",
        "$(execpath webpack.config.js)",
        "--output-path",
        "$(RULEDIR)",
        "-o",
        "$@",
        # "--mode", "development",
    ],
    data = ["@npm//:node_modules", ":bundle_srcs", "webpack.config.js", "tsconfig.json"],
)
