load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "bundle_srcs",
    srcs = glob([
        "*",
        "**/*.ts",
        "vendor/**/*.js",
        "public/*",
        "fbs/*",
    ]),
)

webpack(
    name = "bundle",
    outs = ["dist/bundle.js"],
    args = [
        # "$(execpath index.ts)",
        "--config",
        "$(execpath webpack.config.js)",
        "--output-path",
        "$(RULEDIR)",
        "-o",
        "$@",
        # "--mode", "development",
    ],
    data = [
        "tsconfig.json",
        "webpack.config.js",
        ":bundle_srcs",
        "@npm//:node_modules",
    ],
)
