# XORShift, a fast random number generator

cc_library(
    name = "xorshift",
    srcs = ["xorshift.h", "xorshift.cc"],
    hdrs= ["xorshift.h"],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-pedantic",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "xorshift_test",
    srcs = ["xorshift.test.cc"],
    deps = [
        ":xorshift",
        "@com_github_google_googletest//:gtest",
    ],
    visibility = ["//visibility:public"],
)

